# codeit-part2-2team-project

./: .gitattributes  .gitignore  KickOff.md  README.md  pyproject.toml  requirements.txt
.github/DISCUSSION_TEMPLATE/: daily-report.yml
data/: README.md
docs/: README.md  Submission_History.md  augmentation_strategy.md  branch_protection_setup.md  config_reference.md  dataset_rules.md  error_analysis_template.md  experiment_summary.md  project_kickoff.md  tutorial_2stage_pipeline.md
experiments/: README.md  experiment_log_template.md
experiments/exp_20260420_baseline_yolo26n/: args.yaml  config.yaml  s1_config.yaml  s2_config.yaml  stage1_log.md  stage2_log.md  평가_실험경과_20260427.md
experiments/exp_baseline_yolo11s/: config.yaml
experiments/exp_baseline_yolov8s/: config.yaml
experiments/stage1_detection/: README.md
experiments/stage2_classifier/: README.md  config.yaml
notebooks/: 04_exp_20260420_baseline_yolo26n.ipynb  README.md  pipeline_tutorial.ipynb
reports/: README.md  실험 결과 보고서_baseline.md
scripts/: README.md  build_classification_dataset.py  convert_annotations.py  make_submission.py  predict.py  test.py  train.py  validate.py
scripts/pipeline/: README.md  crop.py  evaluate_pipeline.py  run.py  run_predict.py  run_train.py  stage2_predict.py  (+1 more)
src/: README.md
tests/: README.md  conftest.py  test_augmentations.py  test_classifier.py  test_config.py  test_model_yolo.py  test_pipeline_run.py  test_predictor.py  test_report.py  test_stage2_dataset.py  test_submission.py  test_timing.py  test_trainer.py  test_yolo26.py  test_yolo_model.py
(+27 files in other folders)
